--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,33 @@
+body {
+  font-size: 15px;
+  font-family: 'Open Sans';
+}
+
+h1, h2 {
+  font-family: 'Oswald', sans-serif;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  margin-top: 35px;
+}
+
+table {
+  margin-bottom: 15px;
+}
+
 td, th {
-  padding-left: 0.5em;
-  padding-right: 0.5em;
+  padding-right: 2em;
+}
+
+th {  
+  font-weight: 800;
+  padding-bottom: 10px;
 }
 
 footer {
@@ -10,6 +37,7 @@ footer {
 #historyChart {
   width: 100%
   height: auto;
+  margin-top: 20px;
 }
 
 .players {
