--- a/views/history.html
+++ b/views/history.html
@@ -13,22 +13,25 @@
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
           crossorigin="anonymous" />
           
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+          
     <link rel="stylesheet"
           href="/style.css" />
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Players' History</h1>
+        <h1>Ratings History</h1>
       </header>
+      
+      <section>
+        <a href="https://payworks.com/about-us/careers/">We're hiring!</a> | <a href="https://github.com/jakriz/kicker-field">Github</a>
+      </section>
       
       <main>
         <canvas id="historyChart"></canvas>
       </main>
-  
-      <footer>
-        <a href="https://payworks.com">Payworks</a> Kicker Field | <a href="https://github.com/jakriz/kicker-field">Github</a>
-      </footer>
     </div>
     
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
